@@ -48,6 +48,12 @@ highlight.keyword	=	#007700
 highlight.bg		=	#FFFFFF
 highlight.default	=	#0000BB
 highlight.html		=	#000000
+; Misc
+allow_builtin_links	=	Off		; Sets whether phpinfo() will generate built-in links that display the PHP
+								; and Zend logos, and tells PHP whether to honor them or not.
+								; It is no securty threat in any way, but it make sit possible
+								; to determine whether you use PHP on your server or not.
+
 
 
 ;;;;;;;;;;;;;;;;;;;
